--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,12 @@
 repos:
+-   repo: https://github.com/psf/black
+    rev: 19.3b0
+    hooks:
+    -   id: black
+-   repo: https://github.com/pre-commit/mirrors-isort
+    rev: v4.3.21
+    hooks:
+    -   id: isort
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.5.0
     hooks:
@@ -7,7 +15,3 @@ repos:
     -   id: trailing-whitespace
     -   id: name-tests-test
     -   id: double-quote-string-fixer
--   repo: https://github.com/psf/black
-    rev: 19.3b0
-    hooks:
-    -   id: black
