--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 dist: xenial
 language: python
 python:
-  - "3.6"
   - "3.7"
+  - "3.8"
 install:
+  - sudo apt update
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
   - bash miniconda.sh -b -p $HOME/miniconda
   - source "$HOME/miniconda/etc/profile.d/conda.sh"
@@ -12,7 +13,7 @@ install:
   - conda update -q conda
   - conda info -a
   # Install dependencies
-  - conda create env bayesian python=$TRAVIS_PYTHON_VERSION
+  - conda create -n bayesian python=$TRAVIS_PYTHON_VERSION
   - conda activate bayesian
   - conda env update -f environment.yml
 script: print("success")
