--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ dist: xenial
 language: python
 python:
   - "3.7"
-  - "3.8"
+  - "3.6"
 install:
   - sudo apt update
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
@@ -16,4 +16,7 @@ install:
   - conda create -n bayesian python=$TRAVIS_PYTHON_VERSION
   - conda activate bayesian
   - conda env update -f environment.yml
-script: print("success")
+  - pip install black pytest coverage codecov
+script:
+  - black --version
+  - black --check .
