add examples of pymc3 linear and logistic and Bayesian networks notebook

--- a/environment.yml
+++ b/environment.yml
@@ -1,19 +1,17 @@
 name: bayesian
 channels:
   - defaults
-  - conda-forge
 dependencies:
-  - numpy=1.18.1
-  - pandas=1.0.3
+  - numpy
+  - pandas
   - pip=20.0.2
-  - pymc3=3.8
   - scikit-learn=0.22.1
-  - scipy=1.4.1
+  - scipy
   - setuptools=47.1.1
-  - seaborn=0.10.1
   - pip:
     - cython==0.29.19
     - gpy==1.9.9
     - gpyopt==1.2.6
     - hyperopt==0.2.4
     - pystan==2.19.1.1
+    - pymc3
