--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ gpyopt==1.2.6
 hyperopt==0.2.4
 pystan==2.19.1.1
 pymc3==3.8
+pomegranate==0.14.4
+bnlearn==0.3.17
+pgmpy
 pandas>=1.0.3
 scikit-learn==0.22.1
 scipy>=1.4.1
