--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,12 @@ services:
   - docker
 before_install:
   - docker build -t bayesian .
-  - docker images
-  - docker run -it bayesian
+  - docker run -d -it --name test bayesian
+install:
+  - pip --no-cache-dir install torch
+  - pip install -r requirements_runtime.txt
+  - pip install -r requirements_test.txt
 script:
+  - docker ps | grep -q test
   - black --version
   - black --check .
