--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,10 @@
 language: python
 services:
   - docker
-before_install:
+install:
   - docker build -t bayesian .
   - docker run -d -it --name test bayesian
-install:
-  - pip --no-cache-dir install torch
-  - pip install -r requirements_runtime.txt
-  - pip install -r requirements_test.txt
-script:
+  - docker ps
   - docker ps | grep -q test
-  - black --version
-  - black --check .
+script:
+  - docker exec -it test bash -c "black --version;black --check ."
