--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 pyvis==0.1.9
-pomegranate==0.14.5
 pgmpy==0.1.15
 pyyaml==5.4.1
 networkx==2.5.1
 iteration_utilities==0.11.0
+ipykernel
+dgl
+pathpy2
+matplotlib
